[package]
name = "git-query"
version = "0.1.0"
edition = "2021"
description = "Run SQL against git history"
documentation = "https://github.com/MatthewFay/git-query"
readme = "README.md"
homepage = "https://github.com/MatthewFay/git-query"
repository = "https://github.com/MatthewFay/git-query"
license = "MIT OR Apache-2.0"
keywords = ["git", "git log", "sql", "history", "commits"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.34"
comfy-table = "7.1.0"
git2 = "0.18.2"
rusqlite = { version = "0.30.0", features = ["bundled"] }
